--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --background-main-button: #188ce8;
   --border-color: #eeeeee;
   --border-header-color: #ececec;
+  --background-features-icon: rgba(245, 244, 250, 1);
 }
 .visually-hidden {
   position: absolute;
@@ -147,6 +148,7 @@ ul {
 .contact-link:focus {
   color: var(--secondary-color);
 }
+
 /* Головний заголовок на index.html */
 .section-main {
   max-width: 1600px;
@@ -216,6 +218,11 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 120px;
+  margin-bottom: 30px;
+  background-color: var(--background-features-icon);
+
+  
 }
 .text-title {
   font-weight: 700;
@@ -289,6 +296,29 @@ ul {
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
+  margin-bottom: 16px;
+}
+.team-social{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-item{
+  display: block;
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+.social-item:nth-child(4n){
+  margin-right: 0;
+}
+.social-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 /* Footer */
 .footer {
