--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@
   --border-color: #eeeeee;
   --border-header-color: #ececec;
   --background-features-icon: rgba(245, 244, 250, 1);
+  --team-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  --icon-color: rgba(175, 177, 184, 1);
+  --team-social-background-color: rgba(255, 255, 255, 1);
+  --box-shadow-filter: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  --footer-soc-background: rgba(255, 255, 255, 0.1);
+  --filter-card-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .visually-hidden {
   position: absolute;
@@ -138,6 +146,9 @@ ul {
   margin-left: 50px;
 }
 .contact-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -147,6 +158,12 @@ ul {
 .contact-link:hover,
 .contact-link:focus {
   color: var(--secondary-color);
+}
+.icon-envelope,
+.icon-smartphone {
+  display: block;
+  fill: currentColor;
+  margin-right: 10px;
 }
 
 /* Головний заголовок на index.html */
@@ -184,7 +201,6 @@ ul {
   min-width: 216px;
   min-height: 50px;
   border: 0;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   padding: 10px 32px;
   color: var(--secondary-text-btn);
@@ -201,6 +217,7 @@ ul {
 .main-button:focus {
   color: var(--secondary-text-btn);
   background-color: var(--background-main-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* особливості */
@@ -214,15 +231,14 @@ ul {
 .hidden-item:nth-child(4n) {
   margin-right: 0;
 }
-.features-svg{
+.features-svg {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--background-features-icon);
-
-  
+  border-radius: 4px;
 }
 .text-title {
   font-weight: 700;
@@ -263,6 +279,7 @@ ul {
 }
 .team-item {
   flex-basis: calc((100% - 90px) / 4);
+  box-shadow: var(--team-box-shadow);
   border-radius: 0px 0px 4px 4px;
 }
 .team-div {
@@ -298,28 +315,78 @@ ul {
   text-align: center;
   margin-bottom: 16px;
 }
-.team-social{
+.team-social {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.social-item{
+.social-item {
   display: block;
   width: 44px;
   height: 44px;
   margin-right: 10px;
 }
-.social-item:nth-child(4n){
+.social-item:nth-child(4n) {
   margin-right: 0;
 }
-.social-link{
+.social-link {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  color: var(--icon-color);
+  background-color: var(--team-social-background-color);
 }
+.social-link:hover,
+.social-link:focus {
+  color: var(--text-footer);
+  background-color: var(--secondary-color);
+}
+.social-icon {
+  display: block;
+  fill: currentColor;
+}
+
+/* Постійні клієнти */
+
+.client {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.client-item {
+  display: inline-block;
+  width: 170px;
+  height: 92px;
+  margin-right: 30px;
+}
+.client-item:nth-child(6n) {
+  margin-right: 0;
+}
+.client-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: var(--icon-color);
+  background-color: var(--secondary-background-color);
+  border-radius: 4px;
+  border: 1px solid var(--icon-color);
+}
+.client-link:hover,
+.client-link:focus {
+  color: var(--secondary-color);
+  background-color: var(--secondary-background-color);
+  border: 1px solid var(--secondary-color);
+}
+.client-icon {
+  display: block;
+  fill: currentColor;
+}
+
 /* Footer */
 .footer {
   background-color: var(--background-color);
@@ -329,6 +396,7 @@ ul {
 .footer {
   display: flex;
   flex-direction: column;
+  align-items: baseline;
 }
 
 .footer-link {
@@ -362,7 +430,47 @@ ul {
 .footer-contact:focus {
   color: var(--secondary-color);
 }
-
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.footer-social {
+  margin-left: 70px;
+}
+.footer-title {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--text-footer);
+}
+.footer-social-list{
+  display: flex;
+}
+.footer-social-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+.footer-social-item:nth-child(4n) {
+  margin-right: 0;
+}
+.footer-social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: var(--text-footer);
+  background-color: var(--footer-soc-background);
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  color: var(--text-footer);
+  background-color: var(--secondary-color);
+}
 /*Портфоліо */
 .button-list {
   display: flex;
@@ -384,6 +492,7 @@ ul {
 .button:focus {
   color: var(--secondary-text-btn);
   background-color: var(--secondary-color);
+  box-shadow: var(--box-shadow-filter);
 }
 .button-item {
   margin-right: 8px;
@@ -414,7 +523,7 @@ ul {
   gap: 30px;
 }
 .filter-item {
-  flex-basis: calc((100% - 60px) / 3);
+  flex-basis: calc((100% - 60px)/3);
 }
 .filter-item:nth-child(3n) {
   margin-right: 0;
@@ -422,9 +531,13 @@ ul {
 .filter-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.link-filter {
-  color: var(--main-text-color);
+.filter-item:hover,
+.filter-item:focus{
+  box-shadow: var(--filter-card-box-shadow);
 }
+.link-filter{
+  color: var(--main-text-color);
+  }
 .img-filter {
   display: block;
   max-width: 100%;
